syntax = "proto3";

package golem.cloud.projectpolicy;

enum ProjectAction {
  VIEW_COMPONENT = 0;
  CREATE_COMPONENT = 1;
  UPDATE_COMPONENT = 2;
  DELETE_COMPONENT = 3;
  VIEW_WORKER = 4;
  CREATE_WORKER = 5;
  UPDATE_WORKER = 6;
  DELETE_WORKER = 7;
  VIEW_PROJECT_GRANTS = 8;
  CREATE_PROJECT_GRANTS = 9;
  DELETE_PROJECT_GRANTS = 10;
  VIEW_API_DEFINITION = 11;
  CREATE_API_DEFINITION = 12;
  UPDATE_API_DEFINITION = 13;
  DELETE_API_DEFINITION = 14;
  DELETE_PROJECT = 15;
  VIEW_PROJECT = 16;
  VIEW_PLUGIN_INSTALLATIONS = 17;
  CREATE_PLUGIN_INSTALLATION = 18;
  UPDATE_PLUGIN_INSTALLATION = 19;
  DELETE_PLUGIN_INSTALLATION = 20;
  UPSERT_API_DEPLOYMENT = 21;
  VIEW_API_DEPLOYMENT = 22;
  DELETE_API_DEPLOYMENT = 23;
  UPSERT_API_DOMAIN = 24;
  VIEW_API_DOMAIN = 25;
  DELETE_API_DOMAIN = 26;
  BATCH_UPDATE_PLUGIN_INSTALLATIONS = 27;
}
